# AngularApp/src/app/swagger-proxy/models/create-account-dto.ts
@@ -2,4 +2,5 @@
 export interface CreateAccountDto {
   email?: string;
   password: string;
+  confirmPassword: string;
 }
