# Core/Accounts/CreateAccountDto.cs
@@ -9,5 +9,8 @@ namespace Core.Accounts
 
         [Required]
         public string Password { get; set; }
+
+        [Required]
+        public string ConfirmPassword { get; set; }
     }
 }
